src/snapshots/noyobo_style_factory__css_to_code__tests__keep_is_prefix.snap
---
source: src/css_to_code.rs
expression: output.trim()
---
export default function styleFactory(options) {
  var prefix = options.prefix || '';
  var tag = options.tag || function (tag) { return tag; };
  var rpx = options.rpx;
  var host = options.host || 'host-placeholder';
  var css = ["." , prefix , "h5-blockquote:not(:is(:lang(ae),:lang(yi))){margin-left:" , rpx(40) , "px;margin-right:" , rpx(40) , "px}", ""].join("");
  
  return css;
}
