src/snapshots/noyobo_style_factory__css_to_code__tests__special_chars.snap
---
source: src/css_to_code.rs
expression: output.trim()
---
export default function styleFactory(options) {
  var prefix = options.prefix || '';
  var tag = options.tag || function (tag) { return tag; };
  var rpx = options.rpx;
  var host = options.host || 'host-placeholder';
  var css = [".foo{content:\"a\\\"b\\\\c\\nd\"}", ""].join("");
  
  return css;
}
